// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
<div
  className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabTransparentDropdown-rmc6yw-3 edlcTM"
>
  <div
    className="Dropdown__DropdownFocusWrapper-rmc6yw-2 ldfjZL"
  >
    <button
      className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
      tabIndex={0}
    >
      show more
    </button>
    <ol
      className="Dropdown__DropdownList-rmc6yw-4 evYLnV"
    >
      <li>
        <a
          href=""
          onClick={[Function]}
          tabIndex={0}
        >
          Delete
        </a>
      </li>
      <li>
        <a
          href="/wooo"
          onClick={[Function]}
          tabIndex={0}
        >
          Edit
        </a>
      </li>
    </ol>
  </div>
  <button
    className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
    tabIndex={0}
  >
    show more
  </button>
</div>
`;

exports[`Dropdown matches snapshot for tab hidden (closed) 1`] = `
<div
  className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv"
>
  <button
    className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
    isOpen={false}
    onClick={[Function]}
  >
    show more
  </button>
</div>
`;

exports[`Dropdown matches snapshot for tab hidden (open) 1`] = `
<div
  className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv"
>
  <button
    className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF"
    isOpen={true}
    onClick={[Function]}
  >
    show more
  </button>
  <ol
    className="Dropdown__DropdownList-rmc6yw-4 evYLnV"
  >
    <li>
      <a
        href=""
        onClick={[Function]}
        tabIndex={0}
      >
        Delete
      </a>
    </li>
    <li>
      <a
        href="/wooo"
        onClick={[Function]}
        tabIndex={0}
      >
        Edit
      </a>
    </li>
  </ol>
</div>
`;
